MODULES/ec2/sg.tf
# Security Groups 
resource "aws_security_group" "sg-httpd" {
  name        = "httpd"
  description = "Security Group HTTPD"
  # vpc_id      -> It will choose default VPC

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "sg-ssh" {
  name        = "ssh"
  description = "Security Group HTTPD"
  # vpc_id      -> It will choose default VPC
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
